--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -1,3 +1,7 @@
+html {
+  -webkit-tap-highlight-color: transparent; /* Disable the blue highlight in Chrome  */
+}
+
 /* Targtes on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
   width: 8px;
@@ -11,4 +15,15 @@
   background-color: #323232;
   border-radius: 20px;
   border: 4px solid transparent;
+}
+
+@keyframes swing {
+  from {
+    -moz-transform: rotate(3deg);
+    -webkit-transform: rotate(3deg);
+    transform: rotate(3deg);
+  }
+  to {
+    transform: rotate(-3deg);
+  }
 }
