--- a/web/src/features/login/styles/style.css
+++ b/web/src/features/login/styles/style.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 .form-in {
   display: flex;
   flex-direction: column;
@@ -13,11 +9,11 @@
 
 .box {
   width: 350px;
-  height: 350px;
+  height: 390px;
   font-size: 1.2rem;
   padding: 1rem 2.5rem;
   background-color: #434856;
-  border-radius: 48px;
+  border-radius: 50px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -26,25 +22,17 @@
 }
 
 h1 {
-  font-weight: 900;
+  font-weight: 700;
   font-size: 4rem;
 }
 
 input {
-  width: 90%;
-  margin-bottom: 25px;
-  padding: 0 2rem 0.4rem;
-  font-size: 1rem;
-  border: none;
-  border-bottom: 1px solid #f5f5f5;
+  color: black;
   outline: none;
-  background-color: transparent;
-  color: white;
-  transition: 0.3s all;
-}
-
-input:focus {
-  border-bottom: 1px solid #ff7f50;
+  border: none;
+  overflow: hidden;
+  width: 100%;
+  background: none;
 }
 
 .reset-password {
