added opening UI

--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -36,6 +36,10 @@ html {
   background: #df445c;
 }
 
+button:focus {
+  outline: none;
+}
+
 .bg-confetti-animated {
   background-repeat: repeat-x;
   background-position: top -10px center;
